# Rust-Raytracing

./: Cargo.toml  Readme.md  output.ppm
src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  vec3.rs
src/hittable/: hit_record.rs  sphere.rs
src/material/: dialectric.rs  lambertian.rs  metal.rs
