[package]
name = "Rust-Raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
mimalloc = { version = "0.1.17", default-features = false }
